--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
           <div class="content__user-options">
             <ul class="content__list">
               <li class="content__item">
-                <a href="" class="content__link">Daily</a>
+                <a href="#" class="content__link">Daily</a>
               </li>
               <li class="content__item">
-                <a href="" class="content__link">Weekly</a>
+                <a href="#" class="content__link">Weekly</a>
               </li>
               <li class="content__item">
-                <a href="" class="content__link">Monthly</a>
+                <a href="#" class="content__link">Monthly</a>
               </li>
             </ul>
           </div>
