--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 <a href="#" class="content__link">Daily</a>
               </li>
               <li class="content__item">
-                <a href="#" class="content__link">Weekly</a>
+                <a href="#" class="content__link content__link-active"
+                  >Weekly</a
+                >
               </li>
               <li class="content__item">
                 <a href="#" class="content__link">Monthly</a>
