--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
         <div class="content__card content__card--work">
           <div class="content__title-wrapper">
             <p class="content__title">Work</p>
-            <img
-              src=".//images/icon-ellipsis.svg"
-              alt=""
-              class="content__ellips"
-            />
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="content__hours-wrapper">
             <p class="content__hour">32hrs</p>
@@ -71,11 +72,12 @@
         <div class="content__card content__card--play">
           <div class="content__title-wrapper">
             <p class="content__title">Work</p>
-            <img
-              src=".//images/icon-ellipsis.svg"
-              alt=""
-              class="content__ellips"
-            />
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="content__hours-wrapper">
             <p class="content__hour">32hrs</p>
@@ -86,11 +88,12 @@
         <div class="content__card content__card--study">
           <div class="content__title-wrapper">
             <p class="content__title">Work</p>
-            <img
-              src=".//images/icon-ellipsis.svg"
-              alt=""
-              class="content__ellips"
-            />
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="content__hours-wrapper">
             <p class="content__hour">32hrs</p>
@@ -101,11 +104,12 @@
         <div class="content__card content__card--exercise">
           <div class="content__title-wrapper">
             <p class="content__title">Work</p>
-            <img
-              src=".//images/icon-ellipsis.svg"
-              alt=""
-              class="content__ellips"
-            />
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="content__hours-wrapper">
             <p class="content__hour">32hrs</p>
@@ -116,11 +120,12 @@
         <div class="content__card content__card--social">
           <div class="content__title-wrapper">
             <p class="content__title">Work</p>
-            <img
-              src=".//images/icon-ellipsis.svg"
-              alt=""
-              class="content__ellips"
-            />
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="content__hours-wrapper">
             <p class="content__hour">32hrs</p>
@@ -131,11 +136,12 @@
         <div class="content__card content__card--selfCare">
           <div class="content__title-wrapper">
             <p class="content__title">Work</p>
-            <img
-              src=".//images/icon-ellipsis.svg"
-              alt=""
-              class="content__ellips"
-            />
+            <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
+                fill-rule="evenodd"
+              />
+            </svg>
           </div>
           <div class="content__hours-wrapper">
             <p class="content__hour">32hrs</p>
@@ -144,12 +150,5 @@
         </div>
       </div>
     </main>
-
-    <!-- <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
-    </div> -->
   </body>
 </html>
