--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <div class="content__card content__card--work">
           <div class="content__title-wrapper">
-            <p class="content__title">Work</p>
+            <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -64,14 +64,14 @@
             </svg>
           </div>
           <div class="content__hours-wrapper">
-            <p class="content__hour">32hrs</p>
-            <p class="content__date">last Week - 8hrs</p>
+            <p class="content__hour"></p>
+            <p class="content__date"></p>
           </div>
         </div>
 
         <div class="content__card content__card--play">
           <div class="content__title-wrapper">
-            <p class="content__title">Work</p>
+            <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -80,14 +80,14 @@
             </svg>
           </div>
           <div class="content__hours-wrapper">
-            <p class="content__hour">32hrs</p>
-            <p class="content__date">last Week - 8hrs</p>
+            <p class="content__hour"></p>
+            <p class="content__date"></p>
           </div>
         </div>
 
         <div class="content__card content__card--study">
           <div class="content__title-wrapper">
-            <p class="content__title">Work</p>
+            <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -96,14 +96,14 @@
             </svg>
           </div>
           <div class="content__hours-wrapper">
-            <p class="content__hour">32hrs</p>
-            <p class="content__date">last Week - 8hrs</p>
+            <p class="content__hour"></p>
+            <p class="content__date"></p>
           </div>
         </div>
 
         <div class="content__card content__card--exercise">
           <div class="content__title-wrapper">
-            <p class="content__title">Work</p>
+            <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -112,14 +112,14 @@
             </svg>
           </div>
           <div class="content__hours-wrapper">
-            <p class="content__hour">32hrs</p>
-            <p class="content__date">last Week - 8hrs</p>
+            <p class="content__hour"></p>
+            <p class="content__date"></p>
           </div>
         </div>
 
         <div class="content__card content__card--social">
           <div class="content__title-wrapper">
-            <p class="content__title">Work</p>
+            <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -128,14 +128,14 @@
             </svg>
           </div>
           <div class="content__hours-wrapper">
-            <p class="content__hour">32hrs</p>
-            <p class="content__date">last Week - 8hrs</p>
+            <p class="content__hour"></p>
+            <p class="content__date"></p>
           </div>
         </div>
 
         <div class="content__card content__card--selfCare">
           <div class="content__title-wrapper">
-            <p class="content__title">Work</p>
+            <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z"
@@ -144,8 +144,8 @@
             </svg>
           </div>
           <div class="content__hours-wrapper">
-            <p class="content__hour">32hrs</p>
-            <p class="content__date">last Week - 8hrs</p>
+            <p class="content__hour"></p>
+            <p class="content__date"></p>
           </div>
         </div>
       </div>
