--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
 
-        <div class="content__card content__card--play">
+        <div class="content__card content__card--play" aria-hidden="true">
           <div class="content__title-wrapper">
             <p class="content__title"></p>
             <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg">
@@ -150,5 +150,21 @@
         </div>
       </div>
     </main>
+
+    <footer class="attribution">
+      Challenge by
+      <a
+        class="attribution__link"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        class="attribution__link"
+        href="https://github.com/rafo38kh"
+        target="_blank"
+        >rafo38kh</a
+      >.
+    </footer>
   </body>
 </html>
