--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </div>
       </div>
     </main>
-
+    <!--
     <footer class="attribution">
       Challenge by
       <a
@@ -165,6 +165,6 @@
         target="_blank"
         >rafo38kh</a
       >.
-    </footer>
+    </footer> -->
   </body>
 </html>
